2017-04-05 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/formbroker.xml: better wording of a few
    concepts. Add documentation for the boolean data type
    * doc/xml/internals.xml: fixed incomplete sentence

2017-02-10 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/formbroker/formbroker.tcl: now
    handling natively also boolean in the form y|n or
    0|1

2017-02-01 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: defining and substituting
    RIVETLIB_VERSION
    * rivet/init.tcl.in: the ::rivet namespace is
    created already in src/mod_rivet_ng/mod_rivet_common.c
    Package rivetlib is loaded here now 
    * src/mod_rivet_ng/mod_rivet_common.c: in
    function Rivet_PerInterpInit more code is 
    devolved to the Tcl initialization

2017-01-18 Massimo Manghi <mxmanghi@apache.org>
    * doc/Makefile.am: integration of the automake
    infrastructure and rules
    * src/Makefile.am: removed prefixing of
    library names with DESTDIR

2017-01-17 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am: removing the mpm shared library
    directory only if exists (it's removed by
    the libtool generated rules by the src/Makefile.am)
    * src/Makefile.am: installation directories
    have been prepended by DESTDIR

2017-01-16 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am: removing the _configs.sed file generated
    by configure in distclean target rule fulfills now
    entirely the 'distcheck' target
    
2017-01-04 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am,src/Makefile.am: now handling the 'dist'
    and 'distcheck' targets of the automake generated
    Makefile
    * configure.ac: add RIVET_CORE definition
    * src/mod_rivet_ng/rivetCore.c: now calls
    the alternate form of RivetParse
    * src/parser/parserPkgInit.c: altenate form of
    function Rivet_Parser elimianates the need of
    enclosing the code in the namespace ::request

2016-12-19 Massimo Manghi <mxmanghi@apache.org>